--- a/blogPost.html
+++ b/blogPost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aqui vamos a hace un blog post</h1>
-        <p>Y este el parrafo de inicio</p>
+        <div id= "container">
+            <div id="post">
+                    <h1>Este es el título del post</h1>
+                    <p>Este es le parrafo de inicio donde empezaremos algo grande con ramas.
+                    </p>
+            </div>
+        </div>
     </body>
 </html>
