--- a/blogPost.html
+++ b/blogPost.html
@@ -6,12 +6,12 @@
     <body>
         <div id= "container">
             <div id="cabecera">
-                cabecera
+                Hiperblog
+                <span id="tagline"> Tu blog de confianza </span>
             </div>
             <div id="post">
                     <h1>Este es el título del post</h1>
-                    <p>Este es le parrafo de inicio donde empezaremos algo grande con ramas.
-                    </p>
+                    <p>Este es le parrafo de inicio donde empezaremos algo grande con ramas.</p>
             </div>
         </div>
     </body>
