--- a/blogPost.html
+++ b/blogPost.html
@@ -9,6 +9,10 @@
                     <h1>Este es el título del post</h1>
                     <p>Este es le parrafo de inicio donde empezaremos algo grande con ramas.
                     </p>
+                    <p>Los blogs son las mejor formas de compartir información y tus ideas.
+                        Mucho mas que ir conferencias o salir en Youtube. Excepto si eres un rockstar.
+                        Pero estadisticamente no lo eres.... por ahora.
+                    </p>
             </div>
         </div>
     </body>
